# Casino

backend/: Cargo.toml  package-lock.json
backend/src/: admin_page.rs  main.rs  main_page.rs  session_checker.rs  user_manager.rs
datastuff/data/: mainpage.json  usersStorage.json
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.html
frontend/src/components/: Navbar.svelte
frontend/src/layouts/: __layout.svelte  navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/logging_page/: +page.svelte
frontend/src/routes/profile/: +page.svelte  +page.ts
