[package]
name = "rustCasino"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web = "4.0"
rocket_cors = "0.5.2"